--- a/styles.css
+++ b/styles.css
@@ -11,15 +11,15 @@
 }
 
 body {
-  background-color: #393E46;
+  background-image: url('images/back.jpg');
 }
 
 h1 {
   margin: 30px;
-  font-family: 'Lobster', cursive;
-  text-shadow: 5px 0 #232931;
+  font-family: 'Times', cursive;
+  text-shadow: 5px 0 #0bb7e3;
   font-size: 8rem;
-  color: #4ECCA3;
+  color: #f7880b;
 }
 
 p {
